# matrusse

./: .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark.py
src/: 4RusIntrin.c  4RusIntrin.h  4RusThread.c  4RusThread.h  CMakeLists.txt  TestIntrin.c  benchmark.c  benchmark.h  fourRussianAlgorithm.c  fourRussianAlgorithm.h  fourRussianAlgorithmV2.c  fourRussianAlgorithmV2.h  main.c  matrix.c  matrix.h  test.c  testVerification.c  testVerification.h  utils.c  utils.h  xoshiro256starstar.h
src/tests/: tests-matrix.cpp  tests.cpp
